@startuml university-professor-department-2

hide circle
left to right direction
skinparam ranksep 100
skinparam nodesep 100
skinparam linetype ortho

class University {
}

class Department {
}

class Professor {
}

University -[hidden]-> Department

Professor "1" --> "0..*" University : works at
Department "1" *-- "0..*" Professor : employs
University "1" *-- "0..*" Department : owns


@enduml
